Fix build.gradle.kts